# DCharVault

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
.github/workflows/: build.yml
model/: DatabaseManager.cpp  DatabaseManager.h  DiaryEntry.cpp  DiaryEntry.h  DiaryManager.cpp  DiaryManager.h  EncryptionManager.cpp  EncryptionManager.h  SecureAllocator.h
ui/: EditorToolbar.qml  EditorView.qml
ui/common/: ThemeManager.qml  VaultPasswordField.qml  login.qml
ui/desktop/: EditorToolbar.qml  EditorView.qml  HomeView.qml  SidebarView.qml
viewmodel/: ClipboardSanitizer.cpp  ClipboardSanitizer.h  DiaryListModel.cpp  DiaryListModel.h  DiaryViewModel.cpp  DiaryViewModel.h  LoginViewModel.cpp  LoginViewModel.h  SecurePasswordInput.cpp  SecurePasswordInput.h
